# QtWinSystemUtils

./: CMakeLists.txt  README.md  SingleApplication.cpp  SingleApplication.h  SysFileType.cpp  SysFileType.h  myServiceCode.pro
